tests/snapshots/compiler_error_fixtures/adversarial__type_and_effect_modules__EffectBroken.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/type_and_effect_modules/EffectBroken.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `IO` in this function signature.

  examples/compiler_errors/adversarial/type_and_effect_modules/EffectBroken.flx:3:9
  |
3 |         print("hi")
  |         ^^^^^
  |         ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
